Added delete previous number function. Fixed bugs such as fixing decimal functionality, so that no multiple decimals can be entered. Made code cleaner once more.

--- a/calculator.html
+++ b/calculator.html
@@ -21,7 +21,7 @@
             
             <section class = "calculatorTop">
                 <section>  
-                    <div class = "answerScreen"> 0 </div>
+                    <div class = "answerScreen"> ... </div>
                 </section>
                 <section class = "buttons">
                     <div id ="clear"> AC </div>
